--- a/.github/workflows/.common.yml
+++ b/.github/workflows/.common.yml
@@ -102,6 +102,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       id-token: write
+      contents: read
 
     steps:
       - name: Checkout repository
