--- a/deno.json
+++ b/deno.json
@@ -30,7 +30,12 @@
   "lint": {
     "exclude": [
       "npm"
-    ]
+    ],
+    "rules": {
+      "exclude": [
+        "no-explicit-any"
+      ]
+    }
   },
   "fmt": {
     "exclude": [
