--- a/npm/tsconfig.json
+++ b/npm/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
-    "allowImportingTsExtensions": true
+    "module": "NodeNext",
+    "allowImportingTsExtensions": true,
+    "moduleResolution": "NodeNext"
   }
 }
