feat!: move @mysnpm/utils to @mys-x/utils

--- a/npm/package.json
+++ b/npm/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@mysnpm/utils",
+  "name": "@mys-x/utils",
   "version": "0.1.0",
   "description": "Utils that meet my personal needs.",
   "type": "module",
